--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "eslint-config-twipped": "~2.5.0",
     "eslint-plugin-node": "~6.0.0",
     "eslint-plugin-promise": "~3.8.0",
-    "joi": "~13.4.0",
+    "@hapi/joi": "~15.0.3",
     "tap": "~12.0.1",
     "tapsuite": "~1.1.1"
   },
   "peerDependencies": {
-    "joi": ">= 13"
+    "@hapi/joi": ">= 15"
   },
   "files": [
     "index.js"
